# Blast-Servant

./: .gitignore  Dockerfile  blast-servant.cabal  build.sh  stack.yaml
app/: Main.hs  examples.cabal  slaves.yaml  slaves1.yaml
minikube/: master-pod.yaml  slave-pod.yaml
misc/: Main.hs
src/: Api.hs  App.hs  Main.hs
src/Control/Distributed/Blast/Backend/Servant/: Api.hs  App.hs  CliArgs.hs  Types.hs
