name:                examples
version:             0.1.0.0
synopsis:            A Servant backend for Blast: examples
description:         Please see README.md
homepage:            https://github.com/githubuser/blast#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Jean-Christophe Mincke
maintainer:          jeanchristophe.mincke@gmail.com
copyright:           2016-2017 Jean-Christophe Mincke
category:            Distributed computing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable bs
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wall
  build-depends:
    base >= 4.7 && < 5
    , aeson
    , binary
    , blast
    , blast-servant
    , bytestring
    , cereal
    , containers
    , deepseq
    , directory
    , HTTP
    , http-media
    , monad-logger
    , network-uri
    , operational
    , servant
    , transformers
    , vault
  default-language:    Haskell2010



